Remove overflow:hidden from textarea to work around an IOS8 issue. #MBL-10453

--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -539,7 +539,6 @@
 {
     padding: 8px 34px 8px 0px;
     height: 10em;
-    overflow: hidden;
 }
 
 .row-edit[data-field-type="duration"] > div > .autoComplete-watermark
